# Dozing

./: CMakeLists.txt  Dozing.pro  Dozing.pro.user.0c96874  Dozing.pro.user.72ea240  Dozing.sln  Dozing.vcxproj  Dozing.vcxproj.filters  ListCalc.cpp  ListCalc.h  README.md  deletetemplate.cpp  deletetemplate.h  deletetemplate.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resources.qrc  savetemplate.cpp  savetemplate.h  savetemplate.ui  settings.cpp  settings.h  settings.ui  ui_deletetemplate.h  ui_mainwindow.h  ui_savetemplate.h  ui_settings.h
dfg/: delete_templates.ui
